After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712514 - Missing return and closing brace in gdkevents-quartz.c
Missing return and closing brace in gdkevents-quartz.c
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Quartz
unspecified
Other Mac OS
: Normal normal
: ---
Assigned To: gtk-quartz maintainers
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-11-16 15:06 UTC by fakey
Modified: 2013-11-18 11:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix missing return and closing brace (706 bytes, patch)
2013-11-16 15:06 UTC, fakey
committed Details | Review

Description fakey 2013-11-16 15:06:33 UTC
Created attachment 260004 [details] [review]
Fix missing return and closing brace

Build fails on Mac OS because of missing closing brace. Also seems to be missing a return.
Comment 1 Matthias Clasen 2013-11-17 21:37:37 UTC
Review of attachment 260004 [details] [review]:

oops, thanks. please commit
Comment 2 Matthias Clasen 2013-11-17 21:37:38 UTC
Review of attachment 260004 [details] [review]:

oops, thanks. please commit