Fix missing return and closing brace.

https://bugzilla.gnome.org/show_bug.cgi?id=712514