gdk/quartz/gdkevents-quartz.c
@@ -1680,6 +1680,9 @@ _gdk_quartz_screen_get_setting (GdkScreen   *screen,
       g_value_set_boolean (value, TRUE);
 
       GDK_QUARTZ_RELEASE_POOL;
+
+      return TRUE;
+    }
   
   /* FIXME: Add more settings */
 
